# scintkit

./: .gitignore  README.md  pyproject.toml
examples/: example_process_mothersday.slurm
examples/WIP/: detrend_phase.py  detrend_phase_mothersday.py  old_bin.py  raw_2_1sec.py  test_detrend_phase.py
examples/data/: scintpi3_20241011_0004_96.7572W_32.9920N_v326f_lvl0_lvl3.pq  scintpi3_20241011_0004_96.7572W_32.9920N_v326f_lvl3.pq  scintpi3_20241011_0400_96.7573W_32.9920N_v326f_lvl0_lvl3.pq
examples/mothersday_2024/: process_array_mothersday.slurm
examples/mothersday_2024/data/: ref_ismr_oct11_0to18.pq  scintpi3_20241011_0800_96.7573W_32.9919N_v326f_lvl0_lvl3.pq  scintpi3_20241011_0800_96.7573W_32.9919N_v326f_lvl3.pq  scintpi3_20241011_1200_96.7573W_32.9919N_v326f_lvl0_lvl3.pq  scintpi3_20241011_1200_96.7573W_32.9919N_v326f_lvl3.pq
examples/mothersday_processing/: example_process_mothersday.py
examples/mothersday_processing/data/: scintpi3_20241011_0400_96.7573W_32.9920N_v326f_lvl3.pq
src/scintkit/: __init__.py
src/scintkit/email/: __init__.py  core.py  mailer.py  plotting.py  readme.md  run_pipeline.py  setup.py  station_scintpi_codes_fsr.csv
tests/: example_process_mothersday.py  example_process_mothersday.slurm  example_process_oct10_11.py  example_process_oct10_11.slurm  test_auto_process.py  test_process.py
tests/logs/: scintkit_3682642.err  scintkit_3682642.out  scintkit_3682746.out  scintkit_3682785.err  scintkit_3682785.out  scintkit_3684003.err  scintkit_3684003.out  scintkit_3689061.err  scintkit_3689061.out
tutorials/: compare_oct11.ipynb
(+13 files in other folders)
