[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scintkit"
version = "0.1.0"
description = "Simple tools for working with ScintPi data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "ScintPi contributors" },
]
dependencies = [
  "numpy>=2.2,<3",
  "pandas>=2.2,<3",
  "pyarrow>=19,<20",
  "scipy>=1.15,<2",
  "h5py",
  "matplotlib",
]


[project.optional-dependencies]
dev = [
  "matplotlib",
  "pytest",
]

[tool.setuptools]
packages = [
  "scintkit",
  "scintkit.email",
  "scintkit.pipelines",
  "scintkit.preprocessing",
  "scintkit.reading",
  "scintkit.services"
]

[tool.setuptools.package-data]
"scintkit.email" = ["station_scintpi_codes_fsr.csv"]

[tool.setuptools.package-dir]
scintkit = "src/scintkit"
